<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/chatlayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="5" >

        <EditText
            android:id="@+id/textpole"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:inputType="text" >
        </EditText>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical"
            android:weightSum="2" >

            <Button
                android:id="@+id/kopce_prati"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/kopce_send"
                android:textSize="@dimen/kocpe_text" >
            </Button>

            <Button
                android:id="@+id/kopce_file"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/kopce_file"
                android:textSize="@dimen/kocpe_text" >
            </Button>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/labela"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/chatlayout"
        android:text="@string/lbl_vnesi" >
    </TextView>

    <ListView
        android:id="@+id/lista"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/labela" >
    </ListView>

</RelativeLayout>